# satlinksim-api

./: .gitignore  Dockerfile.api  LICENSE  app.py  config.yaml  docker-compose.yml  ground_stations.py  propogate.py  pyproject.toml  readme.md  render.yaml  satellite_link_sim.py  test_handoff.py  update_tle.py
.github/workflows/: ci.yml
docs/: architecture.md  benchmarks.md  physics_models.md  rain_model.md  references.md  validation.md
real_world_validation/: README.md  rain_comparison_table.csv  validate_rain_nasa_gpm.py  validate_sgp4_satnogs.py
src/cache/: tle_snapshot.json
src/satlinksim/: __init__.py  app.py  cli.py  config.py  database.py  geometry.py  link_quality.py  physicsengine.py  propogate.py  satellite_link_sim.py  update_tle.py
src/satlinksim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/satlinksim/application/: simulation_engine.py
src/satlinksim/domain/: interfaces.py  models.py
src/satlinksim/domain/geometry/: physics.py
src/satlinksim/domain/handoff/: manager.py
src/satlinksim/domain/link/: budget.py  itu_models.py
src/satlinksim/domain/rain/: engine.py
src/satlinksim/infrastructure/api/: client.py  schemas.py  server.py
src/satlinksim/infrastructure/ml/: trainer.py
src/satlinksim/infrastructure/tle/: service.py  updater.py
src/satlinksim/infrastructure/ui/: streamlit_app.py
tests/: test_outage_softness.py  test_parallelism.py  test_physics_invariants.py  test_regression.py  test_sgp4_propagation.py
val_and_bench/: availability_validation.py  benchmarks.py  generate_metrics.py  parallel_benchmarks.py  profile.out  profile_report.md  profile_sim.py  validation_correctness.py
